--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,6 +16,7 @@ jobs:
   build-test-python-app:
 
     runs-on: ubuntu-latest
+    needs: [build-test-python-app]
 
     steps:
     - uses: actions/checkout@v4
@@ -61,7 +62,7 @@ jobs:
 
   docker-build-push-to-dockerhub:
     runs-on: ubuntu-latest
-    needs: [build-test-python-app]
+    needs: [build-test-python-app,sonar-qube-scanner]
     steps:
       -
         name: Set up QEMU
